<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">my Fast Food</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="sign_up">Sign up</string>
    <string name="presentation">Presentation</string>
    <string name="restaurant">Restaurants</string>
    <string name="list">Menu</string>
    <string name="order">Order</string>
    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="telephone">Telephone</string>
    <string name="save">Save</string>
    <string name="have_account">I already have an account</string>
    <string name="email">contact@myFastFood.sn</string>
    <string name="menu_home">Home</string>
    <string name="place_order">Place order</string>
    <string name="error_fields">Require fields</string>
    <string name="error_connection">Connection errors</string>
    <string name="error_parameters">Error parameters</string>
    <string name="success_inscription">Inscription success</string>
    <string name="error_inscription">Inscription Failed</string>
    <string name="error_create">User not created</string>
    <string name="error_update">User not updated</string>
    <string name="error_delete">User not deleted</string>
    <string name="error_list">User not Listed</string>
    <string name="success_create">User created</string>
    <string name="success_update">User updated</string>
    <string name="success_delete">User deleted</string>
    <string name="success_list">User Listed</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_password">Incorrect confirmation password.</string>
    <string name="error_email">Email incorrect.</string>
    <string name="error_password_format">Password incorrect.</string>
    <string name="error_firstname_format">Firstname incorrect.</string>
    <string name="error_lastname_format">Lastname incorrect.</string>
    <string name="error_telephone_format">Phone number incorrect.</string>
    <string name="presentation_service">In the kitchen, there is no compromise on quality. We pay meticulous attention to detail and perfection: from the selection of raw materials to their processing.</string>
    <string name="presentation_restaurant">Since every gesture counts, our teams make sure to offer a warm customer experience that lives up to their expectations. It is in this quest for excellence that we cultivate our difference.</string>
    <string name="presentation_authentique">Between tradition and creation, our Lebanese cuisine remains authentic, our chefs are inspired by ancestral know-how.</string>
    <string name="presentation_partage">Mediterranean, cuisine is generous and colorful. Gastronomic standard of Lebanon, the Mezze symbolizes all the friendliness of the country, dishes that we like to share with friends or family.</string>
    <string name="help_text">Ici, vous trouverez tout ce que vous devez savoir à propos de my fast food qui vous permet de créer votre menu en toute simplicité, d’effectuer le suivi de vos employés et de gérer votre restaurant peu importe où vous vous trouvez. Utilisez le menu de gauche pour explorer les sujets courants dans la rubrique d’aide, ou recherchez des réponses précises au moyen de la barre de recherche</string>
    <string name="help_contact_tel">Telephone: 33 879 51 72</string>
    <string name="help_contact_email">Email: contact@mysfastfood.sn</string>

    <!-- TODO: Remove or change this placeholder text
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>-->

    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Deconnexion</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_activity_inscription">InscriptionActivity</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="header_restaurant">Excellence</string>
    <string name="header_service">Service</string>
    <string name="header_authenticity">Authenticity</string>
    <string name="header_sharing">The sharing</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
</resources>