<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group

        android:checkableBehavior="single">
        <item

            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/presentation" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/list" />

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_place"
            android:title="@string/restaurant" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
    </group>
</menu>