<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InscriptionFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:textSize="@dimen/dim_title"
        android:gravity="center"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="spUsage"
    />
    <ImageView
        android:src="@mipmap/ic_launcher_foreground"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/txtLastName"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/txtTelephone"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/txtLogin"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:layout_marginTop="@dimen/dim_top"
        android:layout_marginLeft="@dimen/dim_left"
        android:layout_marginRight="@dimen/dim_right"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>