<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_all"
    tools:context=".HelpFragment">
    <ImageView
        android:src="@mipmap/ic_launcher_foreground"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="2dp"
       />
    <TextView
        android:id="@+id/telephone"
        android:text="@string/help_contact_tel"
        android:padding="@dimen/dim_all"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@color/logo_color_3"
        android:justificationMode="inter_word"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/help_contact_email"
        android:padding="@dimen/dim_all"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@color/logo_color_3"
        android:justificationMode="inter_word"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/help_text"
        android:layout_marginTop="@dimen/dim_top"
        android:padding="@dimen/dim_all"
        android:textSize="17dp"
        android:justificationMode="inter_word"
        android:background="@color/logo_color_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>